# ai-trueword

./: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: classifier.py  config.py  database.py  main.py  models.py  sources.py
backend/app/extractors/: __init__.py  base.py  video.py  webpage.py
backend/app/llm/: __init__.py  base.py  gemini.py  openai_provider.py  router.py
config/: settings.yaml
deploy/: ai-trueword-bilibili.service  ai-trueword-web.service  env.example  setup.sh
frontend/: index.html
scripts/: bili_login.py  run_bilibili.py
